@@ -454,9 +454,6 @@ aspect CCodeGen {
         p.printPreSteps(this, str, indent);
         FIdUseExp left = (FIdUseExp)getLeft().stripNegations();
         FVariable fv = (FVariable)left.myFV();
-        if (fv.isExternalObject()) {
-            fv.genDestructorCall_C(p, str, indent);
-        }
         fv.genAssignment_C(p, str, indent, fv.name_C(), getRight(), getLeft().isNegated());
         p.printPostSteps(this, str, indent);
     }
