@@ -27,6 +27,14 @@ void* constructor_modelica_msg(const char* str) {
     return res;
 }
 
+void* constructor_error_multiple_calls(const char* str) {
+	static int count = 0; count++;
+	if (count > 1) {
+		ModelicaError("Constructor called more than once");
+	}
+	return constructor_modelica_msg(str);
+}
+
 double constant_extobj_func(void* o) {
     return 1.0;
 }
